# spf2milter

./: .gitignore  AUTHORS  COPYING  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
src/: Makefile.am  Makefile.in  addr_whitelist.c  addr_whitelist.h  spf2milter.c
